Updated CSS form to searchpanel

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		map.on('click', onMapClick);
         </script>
-<div id="form">
+<div id="searchpanel">
 <form action="dblocation3.php" method="post">
     <Label>Search by ID or Coordinates </label>
     <input type="text" name="locationresults" input size="28" value="">
