Removed search by date on main. Added filter by data logic on results.

--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
         </script>
 <div id="searchpanel">
 <form action="dblocation3.php" method="post">
-    <Label>Search by ID or Coordinates </label>
+    <Label>Search by ID or Location </label>
     <input type="text" name="locationresults" input size="28" value="">
     <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
-</form>
-<form action="dbdate.php" method="post">
-   <Label>Search by Day: </label>
-   <input type="text" name="dateresults" value="yyyy-mm-dd" input size="28">
-   <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
 </form>
 </div>
 </body>
