changed search form dimensions.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <div id="searchpanel">
 <p>
 <form action="dblocation3.php" method="post">
-    <Label>Search by ID or Location </label>
+    <Label>Search by ID or Location </label><br>
     <input type="text" name="locationresults" input size="28" value="">
 </p>
 <p>
-<label>Date:</label>
+<label>Date</label><br>
     <input type="text" value=""/>
 </p>
 <p>
