--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
 </p>
 </form>
 </div>
+<div id="notes">
+<b>Notes</b><br>
+- Dates currently not working. Don't use them.<br>
+- Range filter does nothing.<br>
+- Map tracks not up to date.<br>
+</div>
 </body>
 </html> 
